--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.2",
+    "konva": "^4.1.5",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
+    "react-canvas": "^1.3.0",
     "react-dom": "^16.12.0",
+    "react-konva": "^16.12.0-0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
